Fix Avatar component Safari browser alignment issues.

--- a/src/avatar/style/index.less
+++ b/src/avatar/style/index.less
@@ -6,6 +6,7 @@
   text-align: center;
   background: #ccc;
   color: #fff;
+  vertical-align: middle;
   white-space: nowrap;
   position: relative;
   overflow: hidden;
